@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-09T08:11:16Z",
+  "timestamp" : "2023-09-09T16:10:44Z",
   "count_outdated" : 2800,
   "uniques_outdated" : 1117,
-  "count" : 2863,
+  "count" : 2864,
   "uniques" : 1157,
   "clones" : [
     {
@@ -115,9 +115,9 @@
     },
     {
       "timestamp": "2023-09-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
